# rustypy

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  release.md  setup.py  tox.ini
ci/: travis_setup.sh
doc/: search-index.js
doc/rustypy/: fn.krate_data_free.html  fn.krate_data_iter.html  fn.krate_data_len.html  fn.krate_data_new.html  fn.parse_src.html  (+11 more)
src/: lib.rs
src/librustypy/: Cargo.toml  README.md  lib.rs  macros.rs
src/librustypy/pytypes/: mod.rs  pydict.rs  pylist.rs  pystring.rs  pytuple.rs
src/librustypy/tests/: macros.rs
src/rslib/: Cargo.toml  search-index.js
src/rslib/implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
src/rslib/implementors/core/fmt/: trait.Debug.js  trait.Display.js
src/rslib/implementors/core/iter/iterator/: trait.Iterator.js
src/rslib/implementors/core/marker/: trait.Copy.js
src/rslib/implementors/core/ops/bit/: trait.BitAnd.js  trait.BitOr.js  trait.Not.js
src/rslib/implementors/core/ops/deref/: trait.Deref.js
src/rslib/implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
src/rslib/pytypes/: pybool.rs  pylist.rs
src/rslib/rustypy/: index.html  macro.pytuple.html  macro.unpack_pydict!.html  macro.unpack_pydict.html  macro.unpack_pylist.html  macro.unpack_pytuple.html  pytuple.m.html  unpack_pylist.m.html  unpack_pytuple.m.html
src/rslib/rustypy/pytypes/: PyArg.t.html  enum.PyArg.html  index.html
src/rslib/rustypy/pytypes/pybool/: index.html  struct.PyBool.html
src/rslib/rustypy/pytypes/pydict/: enum.PyDictK.html  index.html  sidebar-items.js  struct.IntoIter.html  struct.PyDict.html
src/rslib/rustypy/pytypes/pylist/: index.html  struct.IntoIter.html  struct.PyList.html
src/rslib/rustypy/pytypes/pystring/: index.html  sidebar-items.js  struct.PyString.html
src/rslib/rustypy/pytypes/pytuple/: index.html  struct.PyTuple.html
src/rslib/src/: lib.rs  macros.rs  pytypes.rs
src/rslib/src/pytypes/: mod.rs  pybool.rs  pydict.rs  pylist.rs  pystring.rs  pytuple.rs
src/rslib/src/rustypy/: lib.rs.html
src/rslib/src/rustypy/pytypes/: mod.rs.html  pybool.rs.html  pydict.rs.html  pylist.rs.html  pystring.rs.html  pytuple.rs.html
src/rslib/tests/: macros.rs  nested_types.rs  primitives.rs  submodules.rs
src/rslib/tests/python/: nested_types.rs  primitives.rs  submodules.rs
src/rslib/tests/test_package/: __init__.py  root_module_1.py  root_module_2.py  rustypy_pybind.rs
src/rslib/tests/test_package/basics/: nested_types.py  primitives.py
src/rslib/tests/test_package/firstdir/: call_from_first.py
src/rslib/tests/test_package/firstdir/subfirstdir/: call_from_subfirst.py
tests/: _main.py  log  main.py  nested_types.rs  primitives.rs  py_to_rust.py  submodules.rs  test_py_to_rs.py  test_rs_to_py.py
(+181 files in other folders)
