[package]
name = "rustypy"
version = "0.1.12"
authors = ["IDG <iduartgomez@gmail.com>"]

[dependencies]
cpython = { version="~0.1.0", features=["python-3-5"] }
libc = "~0.2"
syntex_syntax = "0.45.0"
syntex_errors = "0.45.0"

[lib]
name = "rustypy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
