[package]
name = "rustypy"
version = "0.1.13"
authors = ["IDG <iduartgomez@gmail.com>"]

[dependencies]
cpython = { version="~0.1.0", features=["python3-sys"] }
libc = "~0.2"
syn = { version="~0.11", features=["full", "visit"] }
walkdir = "1"

[lib]
name = "rustypy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
